Fix next button, XP/streak, add TTS and JSON import

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- HOME -->
       <section id="screenHome" class="screen isActive">
         <div class="card hero">
-          <div class="heroTitle">Учись быстро,<br>приятно и без духоты</div>
+          <div class="heroTitle"><h1>Учись быстро, приятно и без духоты</h1></div>
           <div class="heroSub">Кликаешь урок → проходишь задания → получаешь XP. Сердечек нет, лимитов нет 😁</div>
 
           <div class="heroBtns">
@@ -97,7 +97,8 @@
               </div>
 
               <!-- ВАЖНО: теперь id = btnNext, чтобы JS ловил -->
-              <button id="btnNext" class="resultBtn" type="button">ДАЛЕЕ</button>
+              <button id="btnResultNext" class="resultBtn">ДАЛЕЕ</button>
+
             </div>
 
             <div id="confetti" class="confetti"></div>
