duo style update

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       <div id="resultSub" class="resultSub">+10 XP</div>
     </div>
 
-    <button id="btnNext" class="resultBtn">ДАЛЕЕ</button>
+    <button id="btnResultNext">ДАЛЕЕ</button>
+
   </div>
 
   <!-- сюда будем кидать конфетти -->
