Fix layout + fonts + tabs

--- a/index.html
+++ b/index.html
@@ -4,68 +4,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Spanish Trainer</title>
-
-  <!-- Чтобы работало и в браузере, и в Telegram -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="app">
-    <!-- Top bar -->
     <header class="topbar">
-      <button id="btnExit" class="iconBtn" aria-label="Exit">✕</button>
-
-      <div class="barWrap" aria-label="Progress">
-        <div class="bar">
-          <div id="barFill" class="barFill" style="width: 0%"></div>
-        </div>
+      <button id="btnExit" class="iconBtn">✕</button>
+      <div class="barWrap">
+        <div id="barFill" class="barFill"></div>
       </div>
-
       <div class="topStats">
-        <div class="statPill"><span class="statIcon">⚡</span><span id="energy">0</span></div>
-        <div class="statPill"><span class="statIcon">🔥</span><span id="streak">0</span></div>
-        <div class="statPill"><span class="statIcon">⭐</span><span id="xpTotal">0</span></div>
+        <div class="statPill"><span>⚡</span><span id="energy">25</span></div>
+        <div class="statPill"><span>🔥</span><span id="streak">0</span></div>
+        <div class="statPill"><span>⭐</span><span id="xpTotal">0</span></div>
       </div>
     </header>
 
-    <!-- Screens -->
     <main class="screenHost">
       <!-- HOME -->
       <section id="screenHome" class="screen isActive">
         <div class="heroCard">
-          <div class="heroLeft">
-            <div class="logoCircle"></div>
-            <div>
-              <div class="heroTitle">Spanish Trainer</div>
-              <div class="heroSub">мини-дуо режим 😄 · без лимитов</div>
+          <div class="heroTitle">Spanish Trainer 🎯</div>
+          <div class="heroSub">Учись быстро, приятно и без духоты</div>
+          <div class="heroStats">
+            <div class="heroStat">
+              <div class="heroStatLabel">Серия</div>
+              <div class="heroStatValue">🔥 <span id="homeStreak">0</span></div>
             </div>
-          </div>
-
-          <div class="heroRight">
-            <div class="miniPill"><span>⚡</span><b id="homeEnergy">0</b></div>
-            <div class="miniPill"><span>🔥</span><b id="homeStreak">0</b></div>
+            <div class="heroStat">
+              <div class="heroStatLabel">Энергия</div>
+              <div class="heroStatValue">⚡ <span id="homeEnergy">25</span></div>
+            </div>
           </div>
         </div>
 
-        <nav class="tabs">
-          <button class="tab isActive" data-go="home">🏠 Главная</button>
-          <button class="tab" data-go="path">🧭 Путь</button>
-          <button class="tab" data-go="practice">🎯 Практика</button>
-          <button class="tab" data-go="stats">📊 Статы</button>
-        </nav>
-
         <div class="bigCard">
-          <h1>Учись быстро,<br/>приятно и без духоты</h1>
-          <p>Кликаешь урок → проходишь задания → получаешь XP. Сердечек нет, лимитов нет 😉</p>
-
+          <h1>Начни учиться прямо сейчас</h1>
+          <p>Кликаешь урок → проходишь задания → получаешь XP. Без лимитов 😉</p>
           <div class="btnRow">
             <button id="btnContinue" class="btnPrimary">Продолжить</button>
-            <button id="btnSync" class="btnGhost">Синк в бота</button>
-            <button id="btnExport" class="btnGhost">Экспорт</button>
           </div>
-
-          <button id="btnImport" class="btnGhost wide">Импорт</button>
+          <div class="btnRow">
+            <button id="btnSync" class="btnGhost">Синк</button>
+            <button id="btnExport" class="btnGhost">Экспорт</button>
+            <button id="btnImport" class="btnGhost">Импорт</button>
+          </div>
         </div>
 
         <div class="smallGrid">
@@ -83,45 +67,37 @@
       <!-- PATH -->
       <section id="screenPath" class="screen">
         <div class="sectionHead">
-          <div class="sectionTitle">Путь</div>
+          <div class="sectionTitle">Твой путь 🗺️</div>
           <div class="sectionHint">Выбирай урок</div>
         </div>
-
-        <div class="pathList" id="pathList"></div>
+        <div id="pathList" class="pathList"></div>
       </section>
 
       <!-- PRACTICE -->
       <section id="screenPractice" class="screen">
         <div class="taskCard" id="taskCard">
-          <!-- RESULT SHEET (как в Duolingo) -->
-<div id="resultSheet" class="resultSheet hidden">
-  <div class="resultInner">
-    <div class="resultLeft">
-      <div id="resultTitle" class="resultTitle">Потрясающе!</div>
-      <div id="resultSub" class="resultSub">+10 XP</div>
-    </div>
-
-    <button id="btnResultNext">ДАЛЕЕ</button>
-
-  </div>
-
-  <!-- сюда будем кидать конфетти -->
-  <div id="confetti" class="confetti"></div>
-</div>
+          <div id="resultSheet" class="resultSheet hidden">
+            <div class="resultInner">
+              <div class="resultLeft">
+                <div id="resultTitle" class="resultTitle">Потрясающе!</div>
+                <div id="resultSub" class="resultSub">+10 XP</div>
+              </div>
+              <button id="btnResultNext">ДАЛЕЕ</button>
+            </div>
+            <div id="confetti" class="confetti"></div>
+          </div>
 
           <div class="taskTop">
             <div class="taskLabel" id="taskLabel">НОВОЕ СЛОВО</div>
-            <div class="taskTitle" id="taskTitle">Переведи предложение</div>
+            <div class="taskTitle" id="taskTitle">Переведи</div>
           </div>
 
           <div class="taskBody">
             <div class="bubble">
-              <button id="btnAudio" class="audioBtn" aria-label="Play">🔊</button>
+              <button id="btnAudio" class="audioBtn">🔊</button>
               <div class="bubbleText" id="promptText">Francia y México.</div>
             </div>
-
             <div class="answerArea" id="answerArea"></div>
-
             <div class="chips" id="chips"></div>
           </div>
 
@@ -135,33 +111,37 @@
       <!-- STATS -->
       <section id="screenStats" class="screen">
         <div class="sectionHead">
-          <div class="sectionTitle">Статы</div>
+          <div class="sectionTitle">Статистика 📊</div>
           <div class="sectionHint">Твой прогресс</div>
         </div>
-
         <div class="bigCard">
           <div class="statLine"><span>Всего XP</span><b id="sXp">0</b></div>
-          <div class="statLine"><span>Streak</span><b id="sStreak">0</b></div>
+          <div class="statLine"><span>Серия</span><b id="sStreak">0</b></div>
           <div class="statLine"><span>Ответов сегодня</span><b id="sAnswered">0</b></div>
-          <div class="statLine"><span>Точность сегодня</span><b id="sAcc">0%</b></div>
+          <div class="statLine"><span>Точность</span><b id="sAcc">0%</b></div>
           <div class="statLine"><span>Слов выучено</span><b id="sWords">0</b></div>
-
-          <button id="btnReset" class="btnDanger wide">Сбросить прогресс</button>
+          <button id="btnReset" class="btnDanger">Сбросить прогресс</button>
         </div>
       </section>
     </main>
+
+    <!-- TABS -->
+    <nav class="tabs">
+      <button class="tab isActive" data-go="home">🏠<br>Главная</button>
+      <button class="tab" data-go="path">🗺️<br>Путь</button>
+      <button class="tab" data-go="practice">🎯<br>Практика</button>
+      <button class="tab" data-go="stats">📊<br>Статы</button>
+    </nav>
   </div>
 
   <!-- MODAL -->
-  <div id="modal" class="modal hidden" role="dialog" aria-modal="true">
+  <div id="modal" class="modal hidden">
     <div class="modalCard">
       <div class="modalHead">
         <div id="modalTitle" class="modalTitle">Заголовок</div>
         <button id="modalX" class="iconBtn">✕</button>
       </div>
-
       <div id="modalBody" class="modalBody">Текст</div>
-
       <div class="modalActions">
         <button id="modalCancel" class="btnGhost">Отмена</button>
         <button id="modalOk" class="btnPrimary">Ок</button>
