--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
   <title>Spanish Trainer</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link rel="stylesheet" href="./styles.css?v=3">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="app">
@@ -123,6 +120,56 @@
           <div class="statLine"><span>Ответов сегодня</span><b id="sAnswered">0</b></div>
           <div class="statLine"><span>Точность</span><b id="sAcc">0%</b></div>
           <div class="statLine"><span>Слов выучено</span><b id="sWords">0</b></div>
+        </div>
+
+        <div class="bigCard">
+          <div class="sectionTitle" style="margin-bottom: 16px;">Достижения 🏆</div>
+          <div class="achievementGrid" id="achievementGrid"></div>
+        </div>
+      </section>
+
+      <!-- SETTINGS -->
+      <section id="screenSettings" class="screen">
+        <div class="sectionHead">
+          <div class="sectionTitle">Настройки ⚙️</div>
+          <div class="sectionHint">Персонализация</div>
+        </div>
+
+        <div class="bigCard">
+          <div class="settingSection">
+            <div class="settingTitle">Тема</div>
+            <div class="themeGrid">
+              <button class="themeBtn active" data-theme="light">
+                <div class="themeIcon">☀️</div>
+                <div>Светлая</div>
+              </button>
+              <button class="themeBtn" data-theme="dark">
+                <div class="themeIcon">🌙</div>
+                <div>Тёмная</div>
+              </button>
+            </div>
+          </div>
+
+          <div class="settingSection">
+            <div class="settingTitle">Звуки и эффекты</div>
+            
+            <div class="settingItem">
+              <div>
+                <div class="settingLabel">Звуковые эффекты</div>
+                <div class="settingDesc">Звуки при ответах</div>
+              </div>
+              <div class="toggle active" data-setting="sounds"></div>
+            </div>
+
+            <div class="settingItem">
+              <div>
+                <div class="settingLabel">Вибрация</div>
+                <div class="settingDesc">Тактильная отдача</div>
+              </div>
+              <div class="toggle active" data-setting="vibration"></div>
+            </div>
+          </div>
+
           <button id="btnReset" class="btnDanger">Сбросить прогресс</button>
         </div>
       </section>
@@ -134,6 +181,7 @@
       <button class="tab" data-go="path">🗺️<br>Путь</button>
       <button class="tab" data-go="practice">🎯<br>Практика</button>
       <button class="tab" data-go="stats">📊<br>Статы</button>
+      <button class="tab" data-go="settings">⚙️<br>Настройки</button>
     </nav>
   </div>
 
@@ -152,6 +200,6 @@
     </div>
   </div>
 
-  <script src="./app.js?v=3"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
