Fix layout + fonts + tabs

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
         <div class="bigCard">
           <div class="settingSection">
-            <div class="settingTitle">Тема</div>
+            <div class="settingTitle">Тема оформления</div>
             <div class="themeGrid">
-              <button class="themeBtn active" data-theme="light">
+              <button class="themeBtn active" data-theme="light" type="button">
                 <div class="themeIcon">☀️</div>
                 <div>Светлая</div>
               </button>
-              <button class="themeBtn" data-theme="dark">
+              <button class="themeBtn" data-theme="dark" type="button">
                 <div class="themeIcon">🌙</div>
                 <div>Тёмная</div>
               </button>
@@ -170,7 +170,7 @@
             </div>
           </div>
 
-          <button id="btnReset" class="btnDanger">Сбросить прогресс</button>
+          <button id="btnResetSettings" class="btnDanger">Сбросить прогресс</button>
         </div>
       </section>
     </main>
