--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
             </div>
           </div>
 
+          <div class="settingSection">
+            <div class="settingTitle">Обновление</div>
+            <button id="btnForceReload" class="btnPrimary wide" style="margin-top: 12px;">🔄 Обновить приложение</button>
+            <div style="font-size: 12px; color: var(--text-light); margin-top: 8px; text-align: center;">
+              Версия: 1.0.10
+            </div>
+          </div>
+
           <button id="btnResetSettings" class="btnDanger">Сбросить прогресс</button>
         </div>
       </section>
