--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 
       <!-- STATS -->
       <section id="screenStats" class="screen">
+      <!-- VOCABULARY -->
+<section id="screenVocab" class="screen">
+  <div class="sectionHead">
+    <div class="sectionTitle">Словарь 📚</div>
+    <div class="sectionHint">Твои изученные слова</div>
+  </div>
+  <div class="bigCard">
+    <div id="vocabList" class="vocabList"></div>
+  </div>
+</section>
         <div class="sectionHead">
           <div class="sectionTitle">Статистика 📊</div>
           <div class="sectionHint">Твой прогресс</div>
@@ -137,6 +147,26 @@
 
         <div class="bigCard">
           <div class="settingSection">
+  <div class="settingTitle">Информация о системе</div>
+  <div class="settingItem" style="flex-direction: column; align-items: flex-start; gap: 8px;">
+    <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+      <div class="settingLabel">Часовой пояс</div>
+      <div id="timezoneDisplay" style="font-size: 13px; color: var(--duo-blue); font-weight: 700;">—</div>
+    </div>
+    <div style="font-size: 12px; color: var(--text-light);">
+      Текущее время: <span id="currentTimeDisplay" style="font-weight: 700; color: var(--text);">—</span>
+    </div>
+    <div style="font-size: 12px; color: var(--text-light);">
+      Сегодня: <span id="todayKeyDisplay" style="font-weight: 700; color: var(--text);">—</span>
+    </div>
+    <div style="font-size: 12px; color: var(--text-light);">
+      Последняя активность: <span id="lastActiveDisplay" style="font-weight: 700; color: var(--text);">—</span>
+    </div>
+    <div style="font-size: 12px; color: var(--text-light);">
+      Серия: <span id="streakDisplay" style="font-weight: 700; color: var(--duo-green);">—</span>
+    </div>
+  </div>
+</div>
             <div class="settingTitle">Тема оформления</div>
             <div class="themeGrid">
               <button class="themeBtn active" data-theme="light" type="button">
@@ -185,12 +215,13 @@
 
     <!-- TABS -->
     <nav class="tabs">
-      <button class="tab isActive" data-go="home">🏠<br>Главная</button>
-      <button class="tab" data-go="path">🗺️<br>Путь</button>
-      <button class="tab" data-go="practice">🎯<br>Практика</button>
-      <button class="tab" data-go="stats">📊<br>Статы</button>
-      <button class="tab" data-go="settings">⚙️<br>Настройки</button>
-    </nav>
+  <button class="tab isActive" data-go="home">🏠<br>Главная</button>
+  <button class="tab" data-go="path">🗺️<br>Путь</button>
+  <button class="tab" data-go="practice">🎯<br>Практика</button>
+  <button class="tab" data-go="vocab">📚<br>Словарь</button>
+  <button class="tab" data-go="stats">📊<br>Статы</button>
+  <button class="tab" data-go="settings">⚙️<br>Настройки</button>
+</nav>
   </div>
 
   <!-- MODAL -->
